fixed another word wrap error

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -19,7 +19,7 @@ body {
 
  * {
    text-overflow: ellipsis;
-   word-break: break-all;
+   word-break: break-word;
  }
 
 h1,
